@startuml Orders_ER
title ER — Orders Service (MySQL)

entity "customers" as C {
  + id
  --
  first_name
  last_name
  email (unique)
  phone
  created_at
  updated_at
}

entity "regions" as RG {
  + id
  --
  name
  code (unique)
}

entity "employees" as E {
  + id
  --
  first_name
  last_name
  email (unique)
  hired_at
  is_manager
  region_id
}

entity "orders" as O {
  + id
  --
  customer_id
  employee_id
  region_id
  order_date
  status
  total_amount
  created_at
  updated_at
}

entity "order_items" as OI {
  + id
  --
  order_id
  product_id (external)
  quantity
  unit_price
  discount
}

C  ||--o{ O  : "1 : N"
E  ||--o{ O  : "1 : N"
RG ||--o{ O  : "1 : N"
O  ||--o{ OI : "1 : N"

@enduml
